--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -99,16 +99,16 @@
   width: 90vw;
   max-width: 260px;
   height: 300px;
+  margin-top: -100px;
 }
 
 .card {
   position: relative;
-  background-color: #fff;
   width: 300px;
   max-width: 300px;
+  flex-direction: row;
   height: 500px;
   background-size: cover;
-  margin-top: -60px;
   background-position: center;
 }
 
@@ -116,6 +116,9 @@
   z-index: 999;
   position: relative;
   margin-left: -203px;
+}
+.swipe_buttons_div {
+  bottom: 130px!important;
 }
 
 .infoText {
