--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.swiper {
+/* .swiper {
   width: 240px;
   height: 320px;
-}
+} */
 
-.swiper-slide {
+/* .swiper-slide {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@
   font-size: 22px;
   font-weight: bold;
   color: #fff;
-}
+} */
 
 .swiper-slide:nth-child(1n) {
   background-color: rgb(206, 17, 17);
@@ -92,24 +92,35 @@
 
 /* END SCROLLBARS */
 
-
+/* START CHAT */
+.bidon .card {
+  position: relative;
+  background-color: #fff;
+  width: 300px;
+  max-width: 300px;
+  height: 500px;
+  background-size: cover;
+  margin-top: -60px;
+  background-position: center;
+}
+/* END CHAT */
 
 /* START SWIPER */
 .swipe {
   position: absolute;
+  margin: auto;
 }
 
-.cardContainer {
+/* .cardContainer {
   width: 90vw;
   max-width: 260px;
   height: 300px;
   margin-top: -100px;
-}
+} */
 
-.card {
+.cardContainer .card {
   position: relative;
   width: 300px;
-  max-width: 300px;
   flex-direction: row;
   height: 500px;
   border-radius: 10px!important;
