[SAVE] for merge

--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -99,11 +99,11 @@
   position: absolute;
 }
 
-.cardContainer {
+/* .cardContainer {
   width: 90vw;
   max-width: 260px;
   height: 300px;
-}
+} */
 
 .card {
   position: relative;
