--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -2,20 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .swiper {
-  width: 240px;
-  height: 320px;
-} */
-
-/* .swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 18px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #fff;
-} */
 
 .swiper-slide:nth-child(1n) {
   background-color: rgb(206, 17, 17);
@@ -111,14 +97,8 @@
   margin: auto;
 }
 
-/* .cardContainer {
-  width: 90vw;
-  max-width: 260px;
-  height: 300px;
-  margin-top: -100px;
-} */
 
-.cardContainer .card {
+.cardContainer, .cardContainer .card {
   position: relative;
   width: 300px;
   flex-direction: row;
@@ -128,14 +108,6 @@
   background-position: center;
 }
 
-/* #undo_button {
-  z-index: 999;
-  position: relative;
-  margin-left: -203px;
-}
-.swipe_buttons_div {
-  bottom: 130px!important;
-} */
 
 .infoText {
   width: 100%;
@@ -146,13 +118,6 @@
   animation-name: popup;
   animation-duration: 800ms;
 }
-
-/* .buttons {
-  margin: 215px 0px 0px 14px;
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-} */
 
 .buttons_inner {
   position: absolute;
