--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
+}
+
 .swiper-slide:nth-child(1n) {
   background-color: rgb(206, 17, 17);
 }
