--- a/main-lovers/src/app/globals.css
+++ b/main-lovers/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn {
+  @apply disabled:bg-green-300 disabled:text-blue-500;
+}
+
 .swiper-slide:nth-child(1n) {
   background-color: rgb(206, 17, 17);
 }
@@ -41,9 +45,6 @@
 .swiper-slide:nth-child(10n) {
   background-color: rgb(54, 94, 77);
 }
-
-
-
 
 /* SCROLLBARS */
 #myMatches::-webkit-scrollbar,
@@ -97,8 +98,8 @@
   margin: auto;
 }
 
-
-.cardContainer, .cardContainer .card {
+.cardContainer,
+.cardContainer .card {
   position: relative;
   width: 300px;
   flex-direction: row;
@@ -107,7 +108,6 @@
   background-size: cover;
   background-position: center;
 }
-
 
 .infoText {
   width: 100%;
@@ -179,11 +179,10 @@
 
 /* END SWIPER */
 
-
 /* CALENDAR */
 
 input[type="date"] {
-  background-color: #FF66C4;
+  background-color: #ff66c4;
   padding: 15px;
 
   font-family: "Roboto Mono", monospace;
@@ -195,7 +194,7 @@ input[type="date"] {
 }
 
 ::-webkit-calendar-picker-indicator {
-  background-color: #BD93F9;
+  background-color: #bd93f9;
   padding: 5px;
   cursor: pointer;
   border-radius: 3px;
@@ -219,9 +218,12 @@ input[type="date"] {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
+  background: linear-gradient(
+      to bottom,
       transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
   font-family: "Courier New", Courier, monospace !important;
 }
 
@@ -242,19 +244,16 @@ svg {
   margin-top: -49px !important;
 }
 
-
 @media only screen and (min-width: 500px) {
   #drawer {
     z-index: 999 !important;
   }
 }
 
-
 th,
 td {
   background-color: unset !important;
 }
-
 
 /* RESPONSIVE MOBILE */
 @media only screen and (max-width: 500px) {
